[package]
name = "revm_hang"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "revm_hang"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-providers = "2.0.13"
revm = { version = "6.0.0", features = ["ethersdb"] }
tokio = "1.36.0"
